[gd_scene load_steps=2 format=2]

[ext_resource path="res://src/Screens/Local.gd" type="Script" id=1]

[node name="Local" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 5
custom_constants/margin_top = 5
custom_constants/margin_left = 5
custom_constants/margin_bottom = 5
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 5.0
margin_top = 5.0
margin_right = 1019.0
margin_bottom = 595.0
custom_constants/separation = 10

[node name="Panel" type="Panel" parent="VBoxContainer"]
margin_right = 1014.0
margin_bottom = 52.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Temp" type="Label" parent="VBoxContainer/Panel/HBoxContainer"]
margin_right = 872.0
margin_bottom = 52.0
size_flags_horizontal = 3
size_flags_vertical = 7
text = "TODO: Filters"
align = 1
valign = 1

[node name="Update_button" type="Button" parent="VBoxContainer/Panel/HBoxContainer"]
margin_left = 876.0
margin_right = 942.0
margin_bottom = 52.0
size_flags_vertical = 3
text = " Update "

[node name="Refresh_button" type="Button" parent="VBoxContainer/Panel/HBoxContainer"]
margin_left = 946.0
margin_right = 1014.0
margin_bottom = 52.0
size_flags_vertical = 3
text = " Refresh "

[node name="Feed" type="Panel" parent="VBoxContainer"]
margin_top = 62.0
margin_right = 1014.0
margin_bottom = 590.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 10.0

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/Feed"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer/Feed/MarginContainer"]
margin_left = 10.0
margin_top = 10.0
margin_right = 1004.0
margin_bottom = 518.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="StatusCont" type="VBoxContainer" parent="VBoxContainer/Feed/MarginContainer/ScrollContainer"]
margin_right = 994.0
margin_bottom = 508.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Networking" type="Node" parent="."]

[node name="AutoReload" type="Timer" parent="."]
wait_time = 30.0
autostart = true

[node name="ScrollTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[connection signal="pressed" from="VBoxContainer/Panel/HBoxContainer/Update_button" to="." method="_on_Update_pressed"]
[connection signal="pressed" from="VBoxContainer/Panel/HBoxContainer/Refresh_button" to="." method="_on_Refresh_button_pressed"]
[connection signal="timeout" from="AutoReload" to="." method="autoreload"]
